# goli

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
docs/source/: conf.py  index.rst
goli/: __init__.py  __main__.py  constants.py  cookiecutters.py  data.py  options.py  utils.py
tests/test_example/: test_hello.py
tests/test_goli/: test_goli.py
